Made admin commands guild-specific

--- a/config.py.example
+++ b/config.py.example
@@ -7,3 +7,7 @@ POSTGRES_CREDENTIALS = {
     "database": "database",
     "host": "ip.address",
 }
+
+# List of guild IDs that are allowed to use the admin commands.
+# Leave blank for global.
+ADMIN_GUILD_IDS = []
